# hft-clob-core

./: .gitignore  BENCH.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/clob-client/: Cargo.toml
crates/clob-client/examples/: _common.rs  localhost_cancel_order.rs  localhost_cancel_replace_keeps_priority.rs  localhost_duplicate_order_id.rs  localhost_engine_seq_monotonic.rs  localhost_kill_switch.rs  localhost_market_in_empty_book.rs  localhost_mass_cancel.rs  localhost_new_order_gtc_crosses.rs  localhost_new_order_gtc_rests.rs  localhost_new_order_ioc_partial.rs  localhost_post_only_would_cross.rs  localhost_snapshot_request.rs
crates/clob-client/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: consts.rs  error.rs  lib.rs  traits.rs
crates/domain/src/types/: account_id.rs  cancel_reason.rs  client_ts.rs  engine_seq.rs  exec_state.rs  mod.rs  order_id.rs  order_type.rs  price.rs  qty.rs  recv_ts.rs  reject_reason.rs  side.rs  tif.rs  trade_id.rs
crates/engine/: Cargo.toml
crates/engine/benches/: add_cancel_mix.rs
crates/engine/src/: clock.rs  engine.rs  ids.rs  lib.rs  sink.rs
crates/engine/tests/: integration.rs  replay_equality.rs  tcp_surface.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  listener.rs  recorder.rs  sink.rs
crates/gateway/tests/: end_to_end.rs
crates/marketdata/: Cargo.toml
crates/marketdata/src/: encoder.rs  lib.rs
crates/matching/: Cargo.toml
crates/matching/src/: book.rs  error.rs  fill.rs  lib.rs
crates/matching/tests/: invariants.proptest-regressions  invariants.rs  props_book_not_crossed.proptest-regressions  props_book_not_crossed.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  state.rs
crates/wire/: Cargo.toml
crates/wire/src/: error.rs  framing.rs  lib.rs
crates/wire/src/inbound/: cancel_order.rs  cancel_replace.rs  kill_switch.rs  mass_cancel.rs  mod.rs  new_order.rs  snapshot_request.rs
crates/wire/src/outbound/: book_update_l2_delta.rs  book_update_top.rs  exec_report.rs  mod.rs  snapshot_response.rs  trade_print.rs
crates/wire/tests/: roundtrip.rs
docker/: Dockerfile  docker-compose.yml
docs/: protocol.md
fixtures/: outbound.golden
scripts/: smoke-test.sh
