[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
domain = { workspace = true }
wire = { workspace = true }
matching = { workspace = true }
risk = { workspace = true }
marketdata = { workspace = true }
gateway = { workspace = true }
ironsbe-channel = { workspace = true }
parking_lot.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
hdrhistogram.workspace = true
dhat = { workspace = true, optional = true }
core_affinity = { workspace = true, optional = true }

[features]
# Enables `dhat-rs` allocation profiling on the smoke bench. Wires
# the global allocator to dhat's counter; only enable for explicit
# `cargo run --release --features hotpath-dhat --bin dhat_bench`
# runs.
hotpath-dhat = ["dep:dhat"]
# Enables `core_affinity`-based CPU pinning of the engine thread.
# When enabled the engine binary accepts `--engine-core <N>` and
# pins the matching thread to that physical core via
# `core_affinity::set_for_current`. Linux is best-supported;
# macOS treats the call as a soft hint via QoS.
pinned-engine = ["dep:core_affinity"]

[dev-dependencies]
proptest.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "add_cancel_mix"
harness = false

[[bin]]
name = "dhat_bench"
required-features = ["hotpath-dhat"]
