[package]
name = "matching"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
domain = { workspace = true }
pricelevel = { workspace = true }

[dev-dependencies]
proptest.workspace = true
