[package]
name = "matching"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
domain = { workspace = true }
pricelevel = { workspace = true }
thiserror = { workspace = true }
# Required to construct `pricelevel::UuidGenerator(namespace: Uuid)`.
# Pricelevel's match_order generates internal trade ids we discard;
# our own `domain::TradeId` comes from the injected `IdGenerator` trait.
uuid = { workspace = true }

[dev-dependencies]
proptest.workspace = true
